--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -783,6 +783,25 @@ Supplementary information: Supplementary data are available at Bioinformatics on
   file = {Scott_Nowak_2005_A Neyman-Pearson approach to statistical learning.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TNIVPEG7/Scott_Nowak_2005_A Neyman-Pearson approach to statistical learning.pdf:application/pdf;IEEE Xplore Abstract Record:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/V783WGI9/abs_all.html:text/html}
 }
 
+@article{heller_consistent_2013,
+  title = {A consistent multivariate test of association based on ranks of distances},
+  volume = {100},
+  issn = {0006-3444, 1464-3510},
+  doi = {10.1093/biomet/ass070},
+  abstract = {We consider the problem of detecting associations between random vectors of any dimension. Few tests of independence exist that are consistent against all dependent alternatives. We propose a powerful test that is applicable in all dimensions and consistent against all alternatives. The test has a simple form, is easy to implement, and has good power.},
+  language = {en},
+  timestamp = {2016-08-09T09:26:43Z},
+  number = {2},
+  urldate = {2016-08-03},
+  journal = {Biometrika},
+  author = {Heller, Ruth and Heller, Yair and Gorfine, Malka},
+  month = jan,
+  year = {2013},
+  keywords = {High-dimensional response,Independence test,Multivariate data,Random vector},
+  pages = {503--510},
+  file = {Heller et al_2012_A consistent multivariate test of association based on ranks of distances.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/3GVUHNSW/Heller et al_2012_A consistent multivariate test of association based on ranks of distances.pdf:application/pdf;Heller et al_2013_A consistent multivariate test of association based on ranks of distances.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/3UVAGT4S/Heller et al_2013_A consistent multivariate test of association based on ranks of distances.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2SAUKDXJ/biomet.html:text/html;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/G2J8UTTZ/503.html:text/html}
+}
+
 @article{mclachlan_bias_1976,
   title = {The bias of the apparent error rate in discriminant analysis},
   volume = {63},
@@ -951,6 +970,7 @@ Results: A model-based approach is used to compare the ranking performances of r
   year = {2003},
   keywords = {Algorithms,Computational Biology,Computer Simulation,Gene Expression Profiling,Humans,Models; Molecular,Neoplasms,Oligonucleotide Array Sequence Analysis},
   pages = {119--142},
+  file = {Mukherjee et al_2003_Estimating dataset size requirements for classifying DNA microarray data.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/XD77K4K5/Mukherjee et al_2003_Estimating dataset size requirements for classifying DNA microarray data.pdf:application/pdf},
   pmid = {12804087}
 }
 
@@ -970,7 +990,7 @@ Results: A model-based approach is used to compare the ranking performances of r
   year = {2004},
   keywords = {Bioinformatics,Computer Science; general,Life Sciences; general,Mathematics; general,MOEA,Pareto optimization,Physics; general,Q 786,TP 181,tumor classification},
   pages = {177--182},
-  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/KNGZDD4K/BF02830598.html:text/html}
+  file = {Juan_Iba_2004_Prediction of tumor outcome based on gene expression data.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/VI2D6ETR/Juan_Iba_2004_Prediction of tumor outcome based on gene expression data.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/KNGZDD4K/BF02830598.html:text/html}
 }
 
 @article{golub_molecular_1999,
@@ -993,21 +1013,22 @@ Results: A model-based approach is used to compare the ranking performances of r
   pmid = {10521349}
 }
 
-@article{heller_consistent_2012,
-  title = {A consistent multivariate test of association based on ranks of distances},
-  issn = {0006-3444, 1464-3510},
-  doi = {10.1093/biomet/ass070},
-  abstract = {We consider the problem of detecting associations between random vectors of any dimension. Few tests of independence exist that are consistent against all dependent alternatives. We propose a powerful test that is applicable in all dimensions and consistent against all alternatives. The test has a simple form, is easy to implement, and has good power.},
-  language = {en},
-  timestamp = {2016-08-06T08:18:08Z},
-  urldate = {2016-08-06},
-  journal = {Biometrika},
-  author = {Heller, Ruth and Heller, Yair and Gorfine, Malka},
-  month = dec,
-  year = {2012},
-  keywords = {High-dimensional response,Independence test,Multivariate data,Random vector},
-  pages = {ass070},
-  file = {Heller et al_2012_A consistent multivariate test of association based on ranks of distances.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/3GVUHNSW/Heller et al_2012_A consistent multivariate test of association based on ranks of distances.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2SAUKDXJ/biomet.html:text/html}
+@article{efron_estimating_1983,
+  title = {Estimating the {{Error Rate}} of a {{Prediction Rule}}: {{Improvement}} on {{Cross-Validation}}},
+  volume = {78},
+  issn = {0162-1459},
+  shorttitle = {Estimating the {{Error Rate}} of a {{Prediction Rule}}},
+  doi = {10.1080/01621459.1983.10477973},
+  abstract = {We construct a prediction rule on the basis of some data, and then wish to estimate the error rate of this rule in classifying future observations. Cross-validation provides a nearly unbiased estimate, using only the original data. Cross-validation turns out to be related closely to the bootstrap estimate of the error rate. This article has two purposes: to understand better the theoretical basis of the prediction problem, and to investigate some related estimators, which seem to offer considerably improved estimation in small samples.},
+  timestamp = {2016-08-10T04:39:52Z},
+  number = {382},
+  urldate = {2016-08-10},
+  journal = {Journal of the American Statistical Association},
+  author = {Efron, Bradley},
+  month = jun,
+  year = {1983},
+  pages = {316--331},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TZFB3NCW/01621459.1983.html:text/html}
 }
 
 
