--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -215,7 +215,7 @@ We thus adhere to the more common, albeit computationally less efficient practic
 
 
 \paragraph{Balanced folding?}
-As already implied, a standard practice when cross validating is to constrain the data folds to be balanced (i.e. stratified).
+As already implied, a standard practice when cross validating is to constrain the data folds to be balanced (i.e. stratified) \citep[e.g.][]{ojala_permutation_2010}.
 This is well justified when aiming at unbiased accuracy estimation. 
 This also simplifies matter when aiming at signal detection, as can be seen from the above discussion of the appropriate test statistic. 
 On the other hand, it may complicate matters, as can be seen from the above discussion on label versus feature permutation. 
@@ -548,6 +548,9 @@ We find that in this mixture class of models, like the location class of models,
 
 
 %TODO: discuss \cite{ojala_permutation_2010}
+% the problems they study
+% my simulated power to the analysis in Figure 6
+
 
 
 
