--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -93,7 +93,7 @@ This practice is also observed in very high profile publications in the genetics
 To fix ideas, we will adhere to a concrete example.
 In \cite{gilron_quantifying_2016}, the authors seek to detect brain regions which encode differences between vocal and non-vocal stimuli. 
 Following the MVPA workflow, the localization problem is cast as a supervised learning problem: if the type of the stimulus can be predicted from the spatial activation pattern significantly better than chance, then a region is declared to encode vocal/non-vocal information. 
-We call this an \emph{accuracy test}, a.k.a.\ \emph{class prediction}, or \emph{pattern discrimination}.
+We call this an \emph{accuracy test}, a.k.a.\ \emph{class prediction}, or \emph{pattern discrimination} 
 
 This same signal detection task can be also approached as a two-group multivariate test.
 Inferring that a region encodes vocal/non-vocal information, is essentially inferring that the spatial distribution of brain activations is different given a vocal/non-vocal stimulus. 
@@ -102,8 +102,8 @@ As put in \cite{pereira_machine_2009}:
 ... the problem of deciding whether the classifier learned to discriminate the classes can be subsumed into the more general question as to whether there is evidence that the underlying distributions of each class are equal or not.
 \end{quote}
 A practitioner may then call upon a two-group location test such as Hotelling's $T^2$ \citep{anderson_introduction_2003}.
-Alternatively, if the size of a brain region is too large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon, such as in \cite{schafer_shrinkage_2005} or \cite{srivastava_testing_2013}.
-For brevity, and in contrast to \emph{accuracy tests}, we will call any two-sample multivariate tests simply \emph{location tests}, also termed \emph{class comparisons}. 
+Alternatively, if the size of a brain region is large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon, such as in \cite{schafer_shrinkage_2005} or \cite{srivastava_multivariate_2007}.
+For brevity, and in contrast to \emph{accuracy tests}, we will call any two-sample multivariate tests simply \emph{location tests}, also termed \emph{class comparisons}. [TODO: rename to parameter test?]
 
 
 At this point, it becomes unclear which is preferable: a location test or an accuracy test?
@@ -112,9 +112,10 @@ The former with a heritage dating back to \cite{hotelling_generalization_1931}, 
 The comparison between location and accuracy tests was precisely the goal of \cite{ramdas_classification_2016}, who compared the $T^2$ location test to the accuracy of \emph{Fisher's linear discriminant analysis} classifier (LDA). 
 By comparing the rates of convergence of the powers to $1$, \cite{ramdas_classification_2016} concluded that accuracy and location tests are rate equivalent. 
 
-Asymptotic relative efficiency measures (ARE) are typically used by statisticians to compare between test statistics with similar rates \citep{vaart_asymptotic_1998}.
-\cite{ramdas_classification_2016} derive the asymptotic power functions of the two test statistics, which allow to extract the ARE between Hotelling's $T^2$ (location) test and Fisher's LDA (accuracy) test.
-Using the Theorem~14.7 in \cite{vaart_asymptotic_1998}, we deduce that the ARE is lower bounded by $2 \pi \approx 6.3$. 
+Asymptotic relative efficiency measures (ARE) are typically used by statisticians to compare between rate-equivalent test statistics \citep{vaart_asymptotic_1998}.
+\cite{ramdas_classification_2016} derive the asymptotic power functions of the two test statistics, which allows to compute the ARE between Hotelling's $T^2$ (location) test and Fisher's LDA (accuracy) test.
+Theorem~14.7 of \cite{vaart_asymptotic_1998} relates asymptotic power functions to ARE.
+Using the results of \cite{ramdas_classification_2016} we deduce that the ARE is lower bounded by $2 \pi \approx 6.3$. 
 This means that Fisher's LDA requires at least $6.3$ more samples to achieve the same (asymptotic) power than the $T^2$ test. 
 In this light, the accuracy test is remarkably inefficient compared to the location test.  
 For comparison, the t-test is only $1.04$ more (asymptotically) efficient than Wilcoxon's rank-sum test \citep{lehmann_parametric_2009}, so that an ARE of $2.5$ is strong evidence in favor of the location test. 
@@ -126,11 +127,11 @@ This eschews the discrete nature of the accuracy statistic, which will be shown 
 Since typical sample sizes in neuroscience are not large, we seek to study which test is to be preferred in finite samples? 
 Our conclusion will be quite simple: {\em location tests almost always have more power than accuracy tests}.
 
-The main argument for our statement rests upon the observation that with typical sample sizes, the accuracy test statistic is highly discrete. 
-Discrete test statistics are known to be conservative \citep{hemerik_exact_2014}, since they are insensitive to mild perturbations of the data, and they cannot exhaust the permissible false positive rate. 
+Our statement rests upon the observation that with typical sample sizes, the accuracy test statistic is highly discrete. 
+Permutation testing with discrete test statistics are known to be conservative \citep{hemerik_exact_2014}, since they are insensitive to mild perturbations of the data, and they cannot exhaust the permissible false positive rate. 
 The degree of discretization is governed by the number of samples. 
 In our neuroscience example from \citet{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
-This number of examples is not unusual if considering this is the number of subjects, or the number of trial-repeats in an neuroimaging study. 
+This number of examples is not unusual if considering this is the number of trial-repeats, or the number of subjects in an neuroimaging study. 
 
 The discretization effect is aggravated if the test statistic is highly concentrated. 
 For an intuition consider the usage of a the \emph{resubstitution accuracy} as a test statistic. 
@@ -397,7 +398,7 @@ For the details of the analysis see Appendix~\ref{apx:analysis} and \cite{gilron
 
 We have set out to understand which of the tests is more powerful: the accuracy test or the location test. 
 Using simulations, we have concluded that the location tests are preferable. 
-Their high dimensional versions such as \cite{srivastava_testing_2013} and \cite{schafer_shrinkage_2005} are preferable for typical neuroimaging problems such as MVPA.
+Their high dimensional versions such as \cite{srivastava_multivariate_2007} and \cite{schafer_shrinkage_2005} are preferable for typical neuroimaging problems such as MVPA.
 We attribute this to several phenomena: 
 (a) Discretization introduced in finite samples by the accuracy test statistic. 
 (b) Inefficient use of the data for the validation holdout set. 
@@ -526,7 +527,7 @@ $B$ denotes the number of Bootstrap samples. } %TODO: caption.
 \subsection{High dimensional classifiers}
 It is known that when $p>n$ Hotelling's $T^2$, and Fisher's LDA are not computable. 
 In our simulations, in which $p=23$ and $n=40$ is ``almost'' high dimensional, but still allows to compute both tests.
-We have simulated two high dimensional versions of Hotelling's $T^2$: \emph{sd} \citep{srivastava_testing_2013} and \emph{Hotelling.shrink} \citep{schafer_shrinkage_2005}. 
+We have simulated two high dimensional versions of Hotelling's $T^2$: \emph{sd} \citep{srivastava_multivariate_2007} and \emph{Hotelling.shrink} \citep{schafer_shrinkage_2005}. 
 The former solves the dimensionality problem by assuming independence over coordinates, and the latter by Tikhonov regularization of the covariance, a-la ridge regression. 
 The corresponding high dimensional accuracy tests would be a \emph{naive Bayes} classfier, and $l_2$ regularized SVM \citep{ramdas_classification_2016}.
 We conjecture that they would not alter our conclusions, since the main force driving the conservativism is discretization, which they do not solve. 
