--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -118,7 +118,7 @@ Theorem~14.7 of \cite{vaart_asymptotic_1998} relates asymptotic power functions 
 Using the results of \cite{ramdas_classification_2016} we deduce that the ARE is lower bounded by $2 \pi \approx 6.3$. 
 This means that Fisher's LDA requires at least $6.3$ more samples to achieve the same (asymptotic) power than the $T^2$ test. 
 In this light, the accuracy test is remarkably inefficient compared to the location test.  
-For comparison, the t-test is only $1.04$ more (asymptotically) efficient than Wilcoxon's rank-sum test \citep{lehmann_parametric_2009}, so that an ARE of $2.5$ is strong evidence in favor of the location test. 
+For comparison, the t-test is only $1.04$ more (asymptotically) efficient than Wilcoxon's rank-sum test \citep{lehmann_parametric_2009}, so that an ARE of $6.3$ is strong evidence in favor of the location test. 
 
 Before discarding accuracy tests as inefficient, we recall that \cite{ramdas_classification_2016} analyzed a \emph{half-sample} holdout. 
 The authors conjectured that a leave-one-out approach, which makes more efficient use of the data, may have better performance. 
@@ -138,7 +138,7 @@ For an intuition consider the usage of a the \emph{resubstitution accuracy} as a
 This statistic simply means that the accuracy is not cross validated. 
 If the data is high dimensional, the resubstitution accuracy will be very high due to over fitting. 
 In a very high dimensional model, the resubstitution accuracy will be $1$ for the observed data \cite[Theorem 1]{mclachlan_bias_1976}, but also for any permutation.
-The concentration of resubstitution accuracy near $1$, and its discreteness, render this test completely useless, with a power tending to $0$ as the dimension of the model grows. 
+The concentration of resubstitution accuracy near $1$, and its discreteness, render this test completely useless, with a power tending to $0$ for any (fixed) effect size, as the dimension of the model grows. 
 
 
 To compare the power of accuracy tests and location tests in finite samples, we perform a simulation study of a battery of test statistics. 
